[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "1_1"
path = "src/day1/part1.rs"

[[bin]]
name = "1_2"
path = "src/day1/part2.rs"

[[bin]]
name = "2_1"
path = "src/day2/part1.rs"

[[bin]]
name = "2_2"
path = "src/day2/part2.rs"

[[bin]]
name = "3_1"
path = "src/day3/part1.rs"

[[bin]]
name = "3_2"
path = "src/day3/part2.rs"

[[bin]]
name = "4_1"
path = "src/day4/part1.rs"

[[bin]]
name = "4_2"
path = "src/day4/part2.rs"

[[bin]]
name = "5_1"
path = "src/day5/part1.rs"

[[bin]]
name = "5_2"
path = "src/day5/part2.rs"

[dependencies]
regex = "1.10.2"
